# src/types/api/paymentIntent/createPaymentIntent.ts
@@ -1,0 +1,7 @@
+import type { components } from "@/types/api/base";
+
+export type CreatePaymentIntentResponse =
+  components["schemas"]["PaymentIntentCreateResponse"];
+
+export type CreatePaymentIntentRequestBody =
+  components["schemas"]["PaymentIntentCreate"];
